# Low_Latency_Dynamic_Accelerator_Offload_System

./: .gitignore  CMakeLists.txt  README.md  another.md  imgui.ini  plan.md
configs/: 10y_treasury_futures.json  aapl.json  btc_perp.json  btc_perp_futures.json  btc_spot.json  eth_perp.json  eth_perp_futures.json  eur_spotfx_futures.json  polymarket_btc_100k.json  sp500_futures.json
src/accelerator/: main.cpp
src/common/: accelerator_types.hpp  cpu_pin.hpp  dashboard_shm.hpp  engine_types.hpp  exchange_shm.hpp  price_level.hpp  runtime_engine_types.hpp  runtime_shm.hpp  shm_core.hpp  shm_manager.cpp  shm_manager.hpp  shm_types.hpp  spin_pause.hpp  spsc_queue.hpp  strategy_shm.hpp  tsc.hpp
src/data/: ORDERBOOK_SYNTHESIS.md  a  config.hpp  data_generator.cpp  data_generator.hpp  main.cpp  plan.md
src/exchange/: data_generator.hpp
src/runtime/: book_snapshot.hpp  display_thread.cpp  display_thread.hpp  main.cpp  order_book.cpp  order_book.hpp  plan.md  runtime_engine.cpp  runtime_engine.hpp
src/tests/: a  data.cpp  order_book_test.cpp
